<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:elevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorBackground">


        <ImageView
                android:src="@drawable/paw"
                android:layout_gravity="start"
                android:contentDescription="@string/app_name"
                android:layout_width="40dp"
                android:layout_height="match_parent"/>

        <TextView
                android:layout_gravity="center"
                android:id="@+id/header"
                android:fontFamily="@font/jockey_one"
                android:text="@string/app_name"
                android:textSize="23sp"
                android:textColor="@color/colorBlue"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

        <TextView
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:text="@string/desc"
                android:textColor="@color/colorGrey"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


    </RelativeLayout>

    <LinearLayout
           android:clickable="true"
           android:focusable="true"
           android:onClick="goDog"
           android:layout_marginBottom="20dp"
           android:orientation="horizontal"
           android:elevation="10dp"
           android:background="@drawable/layout_ripple"
           android:layout_width="350dp"
           android:gravity="center"
           android:layout_height="120dp">

       <androidx.cardview.widget.CardView
               app:cardCornerRadius="20dp"
               android:layout_width="110dp"
               android:layout_height="85dp">
           <ImageView
                   android:scaleType="fitXY"
                   android:src="@drawable/dog"
                   android:layout_width="110dp"
                   android:contentDescription="@string/desc"
                   android:layout_height="85dp"/>
       </androidx.cardview.widget.CardView>

        <View
                android:background="#989898"
                android:layout_marginVertical="10dp"
                android:layout_width="1dp"
                android:layout_marginHorizontal="30dp"
                android:layout_height="match_parent"/>



        <TextView
               android:textSize="18sp"
               android:textColor="@color/colorGrey"
               android:text="@string/kopekler"
               android:textStyle="bold"
               android:fontFamily="@font/jockey_one"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>

   </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            android:elevation="10dp"
            android:onClick="goCat"
            android:background="@drawable/layout_ripple"
            android:layout_width="350dp"
            android:gravity="center"
            android:layout_height="120dp">

        <androidx.cardview.widget.CardView
                app:cardCornerRadius="20dp"
                android:layout_width="110dp"
                android:layout_height="85dp">
            <ImageView
                    android:scaleType="fitXY"
                    android:src="@drawable/cat"
                    android:layout_width="110dp"
                    android:contentDescription="@string/desc"
                    android:layout_height="85dp"/>
        </androidx.cardview.widget.CardView>

        <View
                android:background="#989898"
                android:layout_marginVertical="10dp"
                android:layout_width="1dp"
                android:layout_marginHorizontal="30dp"
                android:layout_height="match_parent"/>


        <TextView
                android:textSize="18sp"
                android:textColor="@color/colorGrey"
                android:text="@string/kediler"
                android:textStyle="bold"
                android:fontFamily="@font/jockey_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:clickable="true"
            android:focusable="true"
            android:onClick="goBird"
            android:orientation="horizontal"
            android:elevation="10dp"
            android:background="@drawable/layout_ripple"
            android:layout_width="350dp"
            android:gravity="center"
            android:layout_height="120dp">

        <androidx.cardview.widget.CardView
                app:cardCornerRadius="20dp"
                android:layout_width="110dp"
                android:layout_height="85dp">
            <ImageView
                    android:scaleType="fitXY"
                    android:src="@drawable/bird"
                    android:layout_width="110dp"
                    android:contentDescription="@string/desc"
                    android:layout_height="85dp"/>
        </androidx.cardview.widget.CardView>

        <View
                android:background="#989898"
                android:layout_marginVertical="10dp"
                android:layout_width="1dp"
                android:layout_marginHorizontal="30dp"
                android:layout_height="match_parent"/>


        <TextView
                android:textSize="18sp"
                android:textColor="@color/colorGrey"
                android:text="@string/kuslar"
                android:textStyle="bold"
                android:fontFamily="@font/jockey_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:elevation="10dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/layout_ripple"
            android:layout_width="350dp"
            android:gravity="center"
            android:layout_height="120dp">






        <androidx.cardview.widget.CardView
                app:cardCornerRadius="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageButton
                    android:onClick="goMap"
                    android:background="@drawable/image_ripple"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

          <LinearLayout
                  android:layout_gravity="bottom"
                  android:layout_marginBottom="20dp"
                  android:layout_marginHorizontal="30sp"
                  android:background="@drawable/layout_radius2"
                  android:layout_width="match_parent"
                  android:gravity="center"
                  android:layout_height="30dp">
              <TextView
                      android:layout_gravity="center"
                      android:textSize="18sp"
                      android:textColor="@color/colorWhite"
                      android:text="@string/veteriner_ve_petshoplar"
                      android:textStyle="bold"
                      android:fontFamily="@font/jockey_one"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>

          </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>



</LinearLayout>